<resources>
    <string name="app_name">MHiker_App</string>
    <string name="add_new_hike">Add new hike</string>

    <string name="hike_name_hint">Name of Hike (Required)</string>
    <string name="location_hint">Location (Required)</string>
    <string name="date_of_hike_hint">Date of Hike (Required)</string>
    <string name="parking_available_hint">Parking Available (Required)</string>
    <string name="length_of_hike_hint">Length of Hike (km) (Required)</string>
    <string name="difficulty_hint">Difficulty Level (Required)</string>
    <string name="description_optional">Description (Optional)</string>

    <string name="save_hike">Save Hike</string>
    <string name="hike_name">Hike Name</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="hiker_count_optional">Hiker Count (Optional)</string>
    <string name="equipment_optional">Equipment (Optional)</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>

    <string name="observations_title">Observations</string>
    <string name="add_observation">Add Observation</string>
    <string name="observation_text_required">Observation (Required)</string>
    <string name="time_of_observation_required">Time of Observation (Required)</string>
    <string name="additional_comments_optional">Additional Comments (Optional)</string>
    <string name="save_observation">Save Observation</string>

    <string name="search_hint">Search hikes by name...</string>

    <string name="advanced_search">Advanced Search (Filter)</string>
    <string name="search">Search</string>
    <string name="show_all_hikes">Show All Hikes</string>
    <string name="search_by_name_optional">Name (Optional)</string>
    <string name="search_by_location_optional">Location (Optional)</string>
    <string name="search_by_length_optional">Min. Length (km) (Optional)</string>
    <string name="search_by_date_optional">Date (Optional)</string>
    <string name="reset">Reset</string>
    <string-array name="difficulty_levels">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Very Hard</item>
    </string-array>

    <string-array name="parking_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register_here">Register here</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name (Required)</string>
    <string name="phone_number">Phone Number (Required)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="reset_password">Reset Password</string>
    <string name="phone_number_for_verification">Phone Number (for verification)</string>
    <string name="new_password">New Password</string>
    <string name="back_to_login">Back to Login</string>

</resources>