<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_advanced_search"
        android:title="@string/advanced_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_all"
        android:title="@string/show_all_hikes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never" />

</menu>