<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddObservationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_observation"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@android:color/white"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etObservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/observation_text_required"
            android:inputType="textCapSentences"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etTimeOfObservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time_of_observation_required"
            android:inputType="text"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etAdditionalComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/additional_comments_optional"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:gravity="top"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnSaveObservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_observation"/>
    </LinearLayout>

</LinearLayout>
